--- a/team.html
+++ b/team.html
@@ -13,7 +13,9 @@
     <link href="img/apple-touch-icon.png" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i|Roboto:100,300,400,500,700|Philosopher:400,400i,700,700i"
+        rel="stylesheet">
 
     <!-- Font Awesome -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.10.0/css/all.min.css" rel="stylesheet">
@@ -35,9 +37,9 @@
     <link href="css/style.css" rel="stylesheet">
 
     <!-- Name: MTENDERE education consultancy -->
-    </head>
+</head>
 
-    <body>
+<body>
     <!-- Topbar Start -->
     <div class="container-fluid bg-dark">
         <div class="row py-2 px-lg-5">
@@ -115,15 +117,16 @@
             <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
                 <div class="input-group">
                     <div class="input-group-prepend">
-                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button" data-toggle="dropdown"
-                            aria-haspopup="true" aria-expanded="false">Courses</button>
+                        <button class="btn btn-outline-light bg-white text-body px-4 dropdown-toggle" type="button"
+                            data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Courses</button>
                         <div class="dropdown-menu">
                             <a class="dropdown-item" href="#">Courses 1</a>
                             <a class="dropdown-item" href="#">Courses 2</a>
                             <a class="dropdown-item" href="#">Courses 3</a>
                         </div>
                     </div>
-                    <input type="text" class="form-control border-light" style="padding: 30px 25px;" placeholder="Keyword">
+                    <input type="text" class="form-control border-light" style="padding: 30px 25px;"
+                        placeholder="Keyword">
                     <div class="input-group-append">
                         <button class="btn btn-secondary px-4 px-lg-5">Search</button>
                     </div>
@@ -206,74 +209,74 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-        <div class="row">
-            <div class="col-md-12 col-lg-4">
-            <div class="footer-logo">
-                <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
-                <p>www.mec.edu<br>
-                Mtendre Education Consult, Babaje Huse<br>
-                Off Mandala Road Area 3, Behind NBs<br>
-                1st Floor Room 1, Lilongwe<br>
-                +265 999 360 325, 265 887 209 531<br>
-                </p>
-            </div>
-            </div>
+            <div class="row">
+                <div class="col-md-12 col-lg-4">
+                    <div class="footer-logo">
+                        <a class="navbar-brand" href="#" image src="img/Mtendere_logo.png"></a>
+                        <p>www.mec.edu<br>
+                            Mtendre Education Consult, Babaje Huse<br>
+                            Off Mandala Road Area 3, Behind NBs<br>
+                            1st Floor Room 1, Lilongwe<br>
+                            +265 999 360 325, 265 887 209 531<br>
+                        </p>
+                    </div>
+                </div>
 
-            <div class="col-sm-6 col-md-3 col-lg-2">
-            <div class="list-menu">
-                <h4>Services</h4>
-                <ul class="list-unstyled">
-                <li><a href="#">About us</a></li>
-                <li><a href="#">Career Guide</a></li>
-                <li><a href="#">Admission process</a></li>
-                <li><a href="#">Scholarship</a></li>
-                <li><a href="#">Contact us</a></li>
-                <li><a href="#">Programs to Study</a></li>
-                <li><a href="#">FAQs</a></li>
-                </ul>
-            </div>
-            </div>
+                <div class="col-sm-6 col-md-3 col-lg-2">
+                    <div class="list-menu">
+                        <h4>Services</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">About us</a></li>
+                            <li><a href="#">Career Guide</a></li>
+                            <li><a href="#">Admission process</a></li>
+                            <li><a href="#">Scholarship</a></li>
+                            <li><a href="#">Contact us</a></li>
+                            <li><a href="#">Programs to Study</a></li>
+                            <li><a href="#">FAQs</a></li>
+                        </ul>
+                    </div>
+                </div>
 
-            <div class="col-sm-6 col-md-3 col-lg-2">
-            <div class="list-menu">
-                <h4>Test preparation</h4>
-                <ul class="list-unstyled">
-                <li><a href="#">IELTS</a></li>
-                <li><a href="#">TOELF</a></li>
-                <li><a href="#">SAT</a></li>
-                <li><a href="#">GRE</a></li>
-                </ul>
+                <div class="col-sm-6 col-md-3 col-lg-2">
+                    <div class="list-menu">
+                        <h4>Test preparation</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">IELTS</a></li>
+                            <li><a href="#">TOELF</a></li>
+                            <li><a href="#">SAT</a></li>
+                            <li><a href="#">GRE</a></li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-2">
+                    <div class="list-menu">
+                        <h4>Top Study destination</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#"><b>Top Study destination</b></a></li>
+                            <li><a href="#">India</a></li>
+                            <li><a href="#">Italy</a></li>
+                            <li><a href="#">Malaysia</a></li>
+                            <li><a href="#">Malta</a></li>
+                            <li><a href="#">Usa</a></li>
+                            <div class="btn">More</div>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-sm-6 col-md-3 col-lg-2">
+                    <div class="list-menu">
+                        <h4>Follow Us</h4>
+                        <ul class="list-unstyled">
+                            <li><a href="#">Lilongwe, Malawi</a></li>
+                        </ul>
+                    </div>
+                </div>
             </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
-            <div class="list-menu">
-                <h4>Top Study destination</h4>
-                <ul class="list-unstyled">
-                <li><a href="#"><b>Top Study destination</b></a></li>
-                <li><a href="#">India</a></li>
-                <li><a href="#">Italy</a></li>
-                <li><a href="#">Malaysia</a></li>
-                <li><a href="#">Malta</a></li>
-                <li><a href="#">Usa</a></li>
-                <div class="btn">More</div>
-                </ul>
-            </div>
-            </div>
-            <div class="col-sm-6 col-md-3 col-lg-2">
-            <div class="list-menu">
-                <h4>Follow Us</h4>
-                <ul class="list-unstyled">
-                <li><a href="#">Lilongwe, Malawi</a></li>
-                </ul>
-            </div>
-            </div>
-        </div>
         </div>
         <div class="copyrights">
-        <div class="container">
-            <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+            <div class="container">
+                <p>&copy; Copyrights 2025 @Mtendere. All rights reserved.</<p>
+            </div>
         </div>
-    </div>
     </footer>
     <a href="#" class="back-to-top"><i class="fa fa-chevron-up"></i></a>
 
@@ -300,8 +303,6 @@
     <!-- Main Javascript File -->
     <script src="js/main.js"></script>
 
-    </body>
+</body>
 
-    </html>
-
-
+</html>
