--- a/index.html
+++ b/index.html
@@ -834,7 +834,16 @@
   <script src="lib/easing/easing.min.js"></script>
   <script src="lib/modal-video/js/modal-video.js"></script>
   <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
+  <!-- JavaScript Libraries -->   
+  <script src="https://code.jquery.com/jquery-3.4.1.min.js"></script>   
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.bundle.min.js"></script>   
+  <script src="lib/waypoints/waypoints.min.js"></script>   
+  <script src="lib/counterup/counterup.min.js"></script>   
+  <script src="lib/owlcarousel/owl.carousel.min.js"></script>
+
   <script src="lib/wow/wow.min.js"></script>
+
   <!-- Contact Form JavaScript File -->
   <script src="contactform/contactform.js"></script>
 
