--- a/index.html
+++ b/index.html
@@ -204,13 +204,15 @@
                 <div class="col-lg-7">
                     <div class="section-title position-relative mb-4">
                         <h6 class="d-inline-block position-relative text-secondary text-uppercase pb-2">About Us</h6>
-                        <h1 class="display-4">First Choice For Online Education Anywhere</h1>
+                        <h1 class="display-4">Excellency In Abroad Education</h1>
                     </div>
-                    <p>Tempor erat elitr at rebum at at clita aliquyam consetetur. Diam dolor diam ipsum et, tempor
-                        voluptua sit consetetur sit. Aliquyam diam amet diam et eos sadipscing labore. Clita erat ipsum
-                        et lorem et sit, sed stet no labore lorem sit. Sanctus clita duo justo et tempor consetetur
-                        takimata eirmod, dolores takimata consetetur invidunt magna dolores aliquyam dolores dolore.
-                        Amet erat amet et magna</p>
+                    <p>
+                        Mtendere Education Consult is a leading education consultancy in Malawi. We provide
+                        professional guidance to students seeking higher education overseas. Our team of experienced
+                        counselors help students identify their goals and guide them through the entire process of
+                        studying abroad. We have partnered with top universities and colleges around the world to
+                        provide students with the best opportunities for their future.
+                    </p>
                     <div class="row pt-3 mx-0">
                         <div class="col-3 px-0">
                             <div class="bg-success text-center p-4">
@@ -330,40 +332,31 @@
                             <div class="carousel-inner" role="listbox">
                                 <div class="carousel-item  active">
                                     <div class="top-top">
-                                        <h2>Study IELTS in Firststep Education
+                                        <h2>
+                                            Dan Kashuwa
                                         </h2>
-                                        <p>The process of studying for IELTS can be overwhelming. It always is of great
-                                            importance to ones
-                                            future and the states are usually very high. IELTS has immense importance
-                                            due to its acceptability
-                                            in almost every colleges and universities abroad. Keeping the importance of
-                                            IELTS and the students
-                                            need in regard DECC has taken the initiative to provide all possible help
-                                            and services to students
-                                            who wish to undertake the IELTS test.
+                                        <p>The process of studying for Eligibility Test was made easy by the help of
+                                            Mtendere Education Consultancy. I am very grateful for the help I received
+                                            from the team. I would recommend Mtendere Education Consultancy to anyone
+                                            looking to study abroad.</p>
                                         </p>
-                                        <h4>First step education</h4>
+                                        <h4>CHINA</h4>
                                     </div>
                                 </div>
 
                                 <div class="carousel-item ">
                                     <div class="top-top">
-                                        <h2>KANCHAN KHAREL</h2>
-                                        <p>“NEC has an exceptional support system for me in order to help me identify
-                                            the right university
-                                            and program that meets my academic ambition and that could lead me to a
-                                            professional career that I
-                                            always desired for. I have been very fortunate to have NEC as my partner to
-                                            make my decision and
-                                            facilitate the entire process to study in Australia. One best thing about
-                                            NEC is that it is led by
-                                            a team that graduated”</p>
-                                        <h4>Australia</h4>
+                                        <h2>Emily Banda</h2>
+                                        <p>“I really enjoyed working with Mtendere Education Consultancy. They provided me 
+                                            with a friendly and supportive environment to learn and grow. I highly 
+                                            recommend this consultancy to anyone looking to improve their English language skills.”
+                                        </p>
+                                        <h4>INDIA</h4>
                                     </div>
                                 </div>
                                 <div class="carousel-item ">
                                     <div class="top-top">
-                                        <h2>NIKISTA HAMAL</h2>
+                                        <h2>Aisha Jamal</h2>
                                         <p>“It was my good luck to get a consultancy which provides me friendly with a
                                             good learning
                                             environment which assists me to find out one of the best universities and a
@@ -371,7 +364,7 @@
                                             Australia. I am always thankful to the consultancy to help to get one step
                                             forward to my
                                             career(dream).”</p>
-                                        <h4>London</h4>
+                                        <h4>Australia</h4>
                                     </div>
                                 </div>
                             </div>
