--- a/index.html
+++ b/index.html
@@ -716,26 +716,90 @@
     <!-- Team End -->
 
     <!--- Blog Section -->
-
-    <!-- Newsletter Section -->
-    <section id="newsletter" class="newsletter text-center wow fadeInUp">
-        <div class="overlay padd-section">
-            <div class="container">
-                <div class="row justify-content-center">
-                    <div class="col-md-9 col-lg-6">
-                        <form class="form-inline" method="POST" action="#">
-                        </form>
+    <div class="container-fluid py-5">
+        <div class="container py-5">
+            <h1 class="display-4 text-uppercase text-center mb-5">Our Blog</h1>
+            <div class="row">
+                <div class="col-lg-4 col-md-6 mb-4">
+                    <div class="blog-item position-relative">
+                        <img class="img-fluid w-100" src="img/blog-1.jpg" alt="">
+                        <div class="blog-overlay">
+                            <div class="d-flex align-items-center justify-content-start">
+                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                class="fa fa-user"></i></a> <span class="text-white">John Doe</span>
+                                <span class="text-white">28 July, 2025</span>
+                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                class="fa fa-comments"></i></a> <span class="text-white">12</span>
+                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                class="fa fa-share-alt"></i></a>
+                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                class="fa fa-heart"></i></a> <span class="text-white">10</span>
+                                <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                class="fa fa-eye"></i></a> <span class="text-white">50</span>           
+                            </div>
+                        </div>
+                        <div class="bg-light p-4">
+                            <h2 class="h5 mb-4">
+                                <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a>
+                            </h2>
+                            <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel turpis semper,
+                                convallis justo vel, fermentum massa. Sed posuere, velit at consectetur elementum,
+                                justo lectus fermentum velit, vitae fermentum ligula felis ut velit.</p>
+                                <a class="btn btn-primary btn-sm" href="#">Read More</a>
+                                <hr class="my-4">
+                                <div class="d-flex align-items-center justify-content-between">
+                                    <span class="text-muted">By <a href="#">John Doe</a></span>
+                                    <span class="text-muted">in <a href="#">Technology</a></span>
+                                </div> 
+                                <hr class="my-4">
+                                <a class="btn btn-primary btn-sm" href="#">Share this post</a>
+                                <a class="btn btn-primary btn-sm" href="#">Like this post</a>
+                                <a class="btn btn-primary btn-sm" href="#">Discuss this post</a>
+                        </div>
+                    </div>
+                    <div class="col-lg-4 col-md-6 mb-4">
+                        <div class="blog-item position-relative">
+                            <img class="img-fluid w-100" src="img/blog-2.jpg" alt="">
+                            <div class="blog-overlay">
+                                <div class="d-flex align-items-center justify-content-start">
+                                    <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                        class="fa fa-user"></i></a> <span class="text-white">Jane Doe</span>
+                                        <span class="text-white">29 July, 2025</span>
+                                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                        class="fa fa-comments"></i></a> <span class="text-white">15</span>
+                                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                        class="fa fa-share-alt"></i></a>
+                                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                        class="fa fa-heart"></i></a> <span class="text-white">8</span>
+                                        <a class="btn btn-lg btn-primary btn-lg-square mx-1" href="#"><i
+                                        class="fa fa-eye"></i></a> <span class="text-white">45</span>
+                                </div>
+                                <div class="bg-light p-4">
+                                    
+                                    <h2 class="h5 mb-4">
+                                        <a href="#">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</a>
+                                    </h2>
+                                    <p class="mb-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed vel turpis semper,
+                                        convallis justo vel, fermentum massa. Sed posuere, velit at consectetur elementum,
+                                        justo lectus fermentum velit, vitae fermentum ligula felis ut velit.</p>
+                                        <a class="btn btn-primary btn-sm" href="#">Read More</a>
+                                        <hr class="my-4">
+                                        <div class="d-flex align-items-center justify-content-between">
+                                            <span class="text-muted">By <a href="#">Jane Doe</a></span>
+                                            <span class="text-muted">in <a href="#">Lifestyle</a></span>
+                                        </div>
+                                        <hr class="my-4">
+                                        <a class="btn btn-primary btn-sm" href="#">Share this post</a>
+                                        <a class="btn btn-primary btn-sm" href="#">Like this post</a>
+                                        <a class="btn btn-primary btn-sm" href="#">Discuss this post</a>
+                                </div>
+                            </div> 
+                        </div>
                     </div>
                 </div>
-                <ul class="list-unstyled">
-                    <li><a href="#"><i class="fa fa-facebook"></i></a></li>
-                    <li><a href="#"><i class="fa fa-twitter"></i></a></li>
-                    <li><a href="#"><i class="fa fa-google-plus"></i></a></li>
-                    <li><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                </ul>
             </div>
         </div>
-    </section>
+    </div>
 
     <!-- image --->
     <div class="container">
