--- a/about.html
+++ b/about.html
@@ -143,8 +143,11 @@
             <div class="row">
                 <div class="col-lg-5 mb-5 mb-lg-0" style="min-height: 500px;">
                     <div class="position-relative h-100">
-
-                        eat;">
+                        <img src="img/about_1.jpg" alt="placeholder" class="img-fluid w-100">
+                        <div class="position-absolute bottom-0 left-0 px-4 py-2 text-white">
+                            <h5 class="mb-0">Welcome to Mtendere</h5>
+                            <p class="mb-0">We are dedicated to providing high-quality education to our clients.</p>
+                        </div>
                     </div>
                 </div>
                 <div class="col-lg-7">
@@ -246,7 +249,7 @@
                 </div>
                 <div class="col-lg-5" style="min-height: 500px;">
                     <div class="position-relative h-100">
-                        <img class="position-absolute w-100 h-100" src="img/feature.jpg" style="object-fit: cover;">
+                        <img class="position-absolute w-100 h-100" src="img/Madam Brenda with Students.jpg" style="object-fit: cover;">
                     </div>
                 </div>
             </div>
@@ -285,7 +288,7 @@
                             
                 <div class="col-md-4 mb-5">
                     <h3 class="text-white mb-4">Get In Touch</h3>
-                    <p><i class="fa fa-map-marker-alt mr-2"></i>Babaje Huse
+                    <p><i class="fa fa-map-marker-alt mr-2"></i>Babaje House
                         Off Mandala Road <br> 
                         Area 3, Behind NBs<br>
                         1st Floor Room 1, <br>
