--- a/index.html
+++ b/index.html
@@ -120,11 +120,34 @@
 
     <!-- Hero Section -->
     <section id="hero" class="wow fadeIn">
-        <div class="hero-container">
-            <h1>Welcome to Mtendere Education Consult</h1>
-            <h2>Study Abroad.</h2>
-            <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+        <!---- owl-carousel --->
+        <div class="owl-carousel owl-theme">
+            <div class="item">
+                <img src="img/hero-1.jpg" alt="hero-1">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="img/hero-2.jpg" alt="hero-2">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
+            </div>
+            <div class="item">
+                <img src="img/hero-3.jpg" alt="hero-3">
+                <div class="hero-container">
+                    <h1>Welcome to Mtendere Education Consult</h1>
+                    <h2>Study Abroad.</h2>
+                    <a href="#get-started" class="btn-get-started scrollto">Get Started</a>
+                </div>
+            </div>
         </div>
+        <!-- End owl-carousel --->
 
         <div class="mx-auto mb-5" style="width: 100%; max-width: 600px;">
             <div class="input-group">
